[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "agentlab"
version = "0.1.0"
description = "Policy-gated multi-agent orchestration for GitLab repositories."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "AgentLab" }]
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.8",
  "python-gitlab>=4.8",
  "PyYAML>=6.0",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.2"]

[project.scripts]
agentlab = "agentlab.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["agentlab"]
